@@ -961,8 +961,11 @@ boolean atme;
 		return(0);
 	}
 
-	/* gain skill for successful cast */
-	use_skill(skill, spellev(spell));
+	/* Skill gain for spells is faster than skill gain for weapons;
+	   four times faster when at basic skill or lower, two times
+	   when above. Players may want to (ab)use this to train spells
+	   even faster by not advancing to skilled as soon as possible. */
+	use_skill(skill, (spellev(spell) * (role_skill <= P_BASIC ? 4 : 2)));
 
 	obfree(pseudo, (struct obj *)0);	/* now, get rid of it */
 	return(1);
