@@ -43,6 +43,7 @@
 	* One-eyed Sam is tougher and it's harder to steal from the black market
 	* Nazgul scream attack added, with limited range (from UnNetHackPlus, based
 	  on code from SporkHack)
+	* Skill gain for spells is faster than skill gain for weapons
 	
 
 	* Artifact changes:
